--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 /node_modules
 /public/hot
 /public/storage
+/public/parcel-client
 /storage/*.key
 /vendor
 .env
 .env.backup
+.idea
 .phpunit.result.cache
 docker-compose.override.yml
 Homestead.json
